<resources>
    <string name="app_name">Blessed Enterprises</string>

    <!-- Start of LockScreen activity literature -->
    <string name="enter_name">Enter Your Name (at least 2 and at most 3)</string>
    <string name="unlock">Unlock</string>
    <string name="note_text" formatted="false">
        <b><u><i>Note:</i></u></b>\n
        <i>
            In order to benefit from our bonuses after using our services a certain number of times,
            please provide your name in the field above so we can keep track of your rentals.\n
            You only need to enter this once per session. Afterwards you may just press the "UNLOCK"
            button. Note that this is only for one session.\n
            We wish you a safe journey!
        </i>
    </string>
    <string name="wrong_code">You entered a wrong PIN</string>
    <string name="no_name">Please provide a name!</string>
    <string name="invalid_name">Invalid name!</string>
    <string name="short_name">Give at least 2 names!</string>
    <string name="long_name">Give at most 3 names!</string>
    <string name="logout_text"><u>Logout</u></string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="logout_warning">Are you sure you want to logout?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>
    <string name="admin_panel"><u>Admin Panel</u></string>
    <string name="status_indicator">Status:&#160;</string>
    <string name="host_error">
        Please ask the host to fill their fields first!\nWe apologize for the inconvenience.
    </string>
    <string name="host_section"><b>Host Section</b></string>
    <string name="name_hint">Host Name</string>
    <string name="host_label"><b>Host:&#160;</b></string>
    <string name="line_label"><b>Line:&#160;</b></string>
    <string-array name="line_options">
        <item>Buea - Yaoundé</item>
        <item>Yaoundé - Buea</item>
        <item>Limbe - Yaoundé</item>
        <item>Yaoundé - Limbe</item>
    </string-array>
    <string name="submit">Submit</string>
    <!-- End of LockScreen activity literature -->

    <!-- Start of AppsLauncher activity literature -->
    <string name="title_activity_apps_launcher">Apps Launcher</string>
    <string name="app_icon_desc">App Icon</string>
    <!-- End of AppsLauncher activity literature -->

    <!-- Start of AdminCheck activity literature -->
    <string name="title_activity_admin_check">Admin Check</string>
    <string name="enter_admin_pin">Enter admin PIN</string>
    <string name="verify_pin">Verify</string>
    <string name="no_privilege">You don\'t have the required privileges!</string>
    <!-- End of AdminCheck activity literature -->

    <!-- Start of AdminPanel activity literature -->
    <string name="title_activity_admin_panel">Admin Panel</string>
    <string name="name_label"><b>Name:&#160;</b></string>
    <string name="date_label"><b>Date:&#160;</b></string>
    <string name="login_label"><b>Login:&#160;</b></string>
    <string name="logout_label"><b>Logout:&#160;</b></string>
    <string name="session_label"><b>Session:&#160;</b></string>
    <string name="count_indicator">Total count:&#160;</string>
    <string name="clear_log"><u>Clear log</u></string>
    <string name="clear_log_warning">Are you sure you want to clear the log?</string>
    <string name="filter_text">Filter</string>
    <string-array name="filter_options">
        <item>Last 7 days</item>
        <item>By month</item>
        <item>All</item>
    </string-array>
    <string name="no_users">Nothing to display</string>
    <string name="generate_sheet">Generate Excel sheet</string>
    <string name="generate_success">Excel file generated</string>
    <string name="generate_failed">Couldn\'t generate excel sheet</string>
    <!-- End of AdminPanel activity literature -->

    <!-- Start of DatePicker activity literature -->
    <string name="title_activity_date_picker">Date Picker</string>
    <string name="year_text">Year:&#160;</string>
    <string name="next_text">Next</string>
    <!-- End of DatePicker activity literature -->

    <!-- Start of Adverts activity literature -->
    <string name="title_activity_adverts">Adverts</string>
    <!-- End of Adverts activity literature -->
</resources>
