<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/darker_gray"
    tools:context="com.blessedenterprises.AdminPanel"
    tools:showIn="@layout/activity_admin_panel">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/listView" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/countIndicator"
            android:text="@string/count_indicator"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/countLog"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorAccent"
            android:layout_toEndOf="@+id/countIndicator"
            android:layout_toRightOf="@+id/countIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/clearLog"
            android:text="@string/clear_log"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/countIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:id="@+id/spinner"
            android:popupBackground="@color/colorAccent"
            android:dropDownSelector="@color/colorPrimaryDark"
            android:dropDownWidth="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner"
            android:layout_alignLeft="@+id/spinner"
            android:layout_below="@+id/spinner"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:text="@string/filter_text"
            android:id="@+id/filter"
            android:onClick="onClickFilter" />

    </RelativeLayout>

</LinearLayout>
